adding green leafs jpg

--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hero text</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <ul class="header">
+        <li class="logo-text">Header logo</li>
+        <div class="links">
+            <li>Header link one</li>
+            <li>Header link tow</li>
+            <li>Header link three</li>
+        </div>
+    </ul>
+    <div class="sec1">
+        <div class="right-text">
+            <div class="right-header">This website is awesome</div>
+            <div class="right-under">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="but1">Sign Up</button>
+        </div>
+        <img class="mg1" src="green-leafs.jpg" >
+    </div>
+    <div class="sec2">
+        <div class="text3">Some random information.</div>
+        <div class="pics">
+           <div class="one">
+            <img class="o" src="seagulls.jpg">
+           <div>this is some subtext under an illustration or image</div>
+           </div>
+           <div class="two">
+            <img class="t" src="owls.jpg">
+            <div>this is some subtext under an illustration or image</div>
+           </div>
+           <div class="three">
+            <img class="th" src="tits.jpg">
+            <div>this is some subtext under an illustration or image</div>
+           </div> 
+            <div class="four">
+            <img class="f" src="swans.jpeg">
+            <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="sec3">
+        <div class="grey">
+        <div class="qu">This is an inspiring quote, or a testtmonial  from a customer. Maybe it's just filling up space, or maybe people will actuallly read it. Who knows? All I know is that it looks nice.</div>
+        <div class="qu-te">-Thor, God of Thunder</div>
+        </div>
+    </div>
+    <div class="sec4">
+        <div class="bluebox">
+        <div class="bluetext"><div class="blueti">Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right there</div></div>
+        <button class="bluebut">Sign up</button></div>
+    </div>
+    <div class="sec5">
 
+    </div>
+    <div class="sec5">
+        <div class="tail">Copyright @ The Odin Projecr 2024</div>
+    </div>
+
+</body>
+</html>
